# llvm-pass-manager-demos

./: .gitignore  LICENSE  README.md
CompileTimeFunctionCall/: MyPass.cpp  run.sh
ConstantAdditionCombiner/: MyPass.cpp  run.sh
FunctionPass/: MyPass.cpp  foo.c  run.sh
LoopPass/: CMakeLists.txt  MyPass.cpp  foo.c  run.sh
ModulePass/: MyPass.cpp  run.sh
RunTimeFunctionCallCounter/: MyPass.cpp  run.sh
SimplePass/: MyPass.cpp  foo.c  run.sh
